mainHeader z-index fix

--- a/src/components/layout/main-header/mainHeader.sass
+++ b/src/components/layout/main-header/mainHeader.sass
@@ -2,7 +2,7 @@
     height: 80px
     position: sticky
     top: -2px
-    z-index: 4
+    z-index: 6
     background-color: #121212
     // position: relative
     @include responsive_ls
